fdo#53061: Work around boost::ptr_vector.insert(..., nullptr) problem

At least with certain versions of Boost and Clang, and when NULL is defined as
nullptr, compilation failed here.  To me, looks like an error of either Boost or
Clang; replacing "NULL" with "0" appears to be a good enough workaround.
(Identified by Jung-uk Kim.)

Change-Id: I702587abfabad6dba55a2b4c65a53e332b4ab048